--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.8.8",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "graphql": "^16.8.1",
@@ -42,5 +39,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
